@@ -281,19 +281,16 @@ public class VFSDirectoryEntryTable extends JTable
 				{
 					if(model.files[row].expanded)
 					{
-						model.collapse(
-							VFSManager.getVFSForPath(
-							model.files[row].dirEntry.getPath()),
-							row);
-						break;
+						toggleExpanded(row);
+						return;
 					}
 
 					for(int i = row - 1; i >= 0; i--)
 					{
-						if(model.files[i].expanded)
+						if((model.files[i].expanded) && (model.files[i].level < model.files[row].level))
 						{
 							setSelectedRow(i);
-							break;
+							return;
 						}
 					}
 				}
